Avatar hover legibility fix

--- a/themes/btw.bitslayn.revertProfiles/src/profiles/popout.scss
+++ b/themes/btw.bitslayn.revertProfiles/src/profiles/popout.scss
@@ -99,33 +99,40 @@
     // Avatar hover
     > header > [class^="avatar"]:not(:has(> [class^="overlayIcon"])) {
       @each $lang, $string in lang.$view-profile {
-        :lang(#{$lang}):hover [class*="overlay"]::after {
+        &:lang(#{$lang}):hover::after {
           content: $string;
         }
       }
-      &:hover [class*="overlay"]::after {
+      &:hover::after {
+        position: absolute;
+        top: 0;
+        right: 0;
         font-size: 10px;
         line-height: 12px;
         font-weight: 700;
         width: 100%;
-        padding-top: 4px;
         height: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
         white-space: nowrap;
         text-overflow: ellipsis;
-        overflow: hidden;
         text-transform: uppercase;
-        box-shadow: inset 0 0 120px hsl(var(--black-500-hsl) / 0.75);
         color: var(--white-500);
+        width: 100%;
+        height: 100%;
+        box-shadow: inset 0 0 120px hsl(var(--black-500-hsl) / 0.75);
         opacity: 1;
+        mask-image: url(#svg-mask-avatar-status-round-80);
       }
-      [class*="overlay"]::after {
+      &::after {
         transition: opacity 0.1s ease;
         background-color: unset;
         border-radius: unset;
         opacity: 0;
+      }
+      [class*="overlay"]::after {
+        display: none;
       }
     }
 
